c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/extra_credit/post_exp_incr.c
int main(void) {
    int product = 1;
    for (int i = 0; i < 10; i++) {
        product = product + 2;
    }
    return product;
}