c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/extra_credit/label_in_loop_header.c
int main(void) {
    for (int i = 0; label: i < 10; i = i + 1) {
        ;
    }
    return 0;
}